[gd_scene load_steps=15 format=2]

[ext_resource path="res://Misc/Fonts/Squarely.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Maps/Map.gd" type="Script" id=2]
[ext_resource path="res://Path/GridPath.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/RegenChamber.tscn" type="PackedScene" id=4]
[ext_resource path="res://Misc/Fonts/SquarleyEdited.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.152941, 0.0901961, 0.454902, 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="Map" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 304.0, 168.0 ],
"_edit_vertical_guides_": [ 48.0 ]
}

[node name="GridPath" parent="." instance=ExtResource( 3 )]
visible = true

[node name="RegenChamber" parent="." instance=ExtResource( 4 )]
position = Vector2( 304, 304 )

[node name="Collectibles" type="Node2D" parent="."]

[node name="StartPositions" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="DotExludes" type="Node2D" parent="."]
visible = false

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="Info" type="Control" parent="UI"]
anchor_right = 1.0
margin_bottom = 40.0
theme = SubResource( 3 )

[node name="Points" type="HBoxContainer" parent="UI/Info"]
anchor_right = 1.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="Ally" type="Label" parent="UI/Info/Points"]
margin_left = 211.0
margin_right = 291.0
margin_bottom = 34.0
rect_min_size = Vector2( 80, 0 )
custom_colors/font_color = Color( 0.537255, 0.705882, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "0"
align = 2
valign = 1

[node name="Time" type="Label" parent="UI/Info/Points"]
margin_left = 296.0
margin_top = 6.0
margin_right = 312.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 8 )
text = "vs"
valign = 1
uppercase = true

[node name="Enemy" type="Label" parent="UI/Info/Points"]
margin_left = 317.0
margin_right = 397.0
margin_bottom = 34.0
rect_min_size = Vector2( 80, 0 )
custom_colors/font_color = Color( 1, 0.411765, 0.411765, 1 )
custom_fonts/font = SubResource( 7 )
text = "0"
valign = 1

[node name="Time" type="Label" parent="UI/Info"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 9 )
text = "00:00"
uppercase = true

[node name="ChangeThis" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="Panel" parent="ChangeThis"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Centre" type="Position2D" parent="."]
position = Vector2( 304, 304 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 304, 304 )
current = true

[node name="Loading" type="Label" parent="."]
margin_left = 240.0
margin_top = 272.0
margin_right = 368.0
margin_bottom = 336.0
custom_colors/font_color = Color( 0.996078, 0.74902, 0.00392157, 1 )
custom_fonts/font = SubResource( 5 )
text = "Loading..."
align = 1
valign = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Ready" type="Label" parent="."]
visible = false
margin_left = 240.0
margin_top = 272.0
margin_right = 368.0
margin_bottom = 336.0
custom_colors/font_color = Color( 0.996078, 0.74902, 0.00392157, 1 )
custom_fonts/font = SubResource( 6 )
text = "Ready"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="GameOver" type="Label" parent="."]
visible = false
margin_left = 240.0
margin_top = 272.0
margin_right = 368.0
margin_bottom = 336.0
custom_colors/font_color = Color( 0.996078, 0.00392157, 0.00392157, 1 )
custom_fonts/font = SubResource( 4 )
text = "Game over"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="StartStall" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ReadyDelay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EndDelay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Time" type="Timer" parent="."]

[connection signal="respawnPlayer" from="RegenChamber" to="." method="_on_RegenChamber_respawnPlayer"]
[connection signal="timeout" from="StartStall" to="." method="_on_StartStall_timeout"]
[connection signal="timeout" from="ReadyDelay" to="." method="_on_ReadyDelay_timeout"]
[connection signal="timeout" from="EndDelay" to="." method="_on_EndDelay_timeout"]
[connection signal="timeout" from="Time" to="." method="_on_Time_tick"]
